customer and order route added
