# routes/OrderRoute.js
@@ -1,24 +1,144 @@
-// const express = require('express');
-// const router = express.Router();
-// const { AddOrder } = require('../controller/OrderController');
+const express = require('express');
+const router = express.Router();
+const {
+  addNewOrder,
+  updateOrder,
+  deleteOrder,
+  getOrderById,
+  getOrder,
+} = require('../controller/OrderController');
 
-// router.post('/Order', async (req, res, next) => {
-//   const result = await AddOrder(req.body);
-//   if (result._id) {
-//     return res.status(200).json({
-//       result,
-//       isSuccess: true,
-//       error: '',
-//       statusCode: 200,
-//     });
-//   } else {
-//     return res.status(400).json({
-//       result: '',
-//       isSucess: false,
-//       error: result,
-//       statusCode: 400,
-//     });
-//   }
-// });
+router.post('/Order', (req, res, next) => {
+  addNewOrder(req.body)
+    .then((result) => {
+      return res.status(200).json({
+        result,
+        isSuccess: true,
+        error: '',
+        statusCode: 200,
+      });
+    })
+    .catch((err) => {
+      return res.status(400).json({
+        result: '',
+        isSuccess: false,
+        error: err.errors,
+        statusCode: 400,
+      });
+    });
+});
 
-// module.exports = router;
+router.put('/Order', (req, res, next) => {
+  updateOrder(req.body)
+    .then((result) => {
+      if (result[0] > 0)
+        return res.status(200).json({
+          result,
+          isSuccess: true,
+          error: '',
+          statusCode: 200,
+        });
+      else
+        return res.status(200).json({
+          result: '',
+          isSuccess: true,
+          error: '',
+          statusCode: 204,
+        });
+    })
+    .catch((err) => {
+      return res.status(400).json({
+        result: '',
+        isSuccess: false,
+        error: err,
+        statusCode: 400,
+      });
+    });
+});
+
+router.delete('/Order/:ID/:MODIFIED_BY', (req, res, next) => {
+  deleteOrder(req.params)
+    .then((result) => {
+      if (result[0] > 0)
+        return res.status(200).json({
+          result,
+          isSuccess: true,
+          error: '',
+          statusCode: 200,
+        });
+      else
+        return res.status(200).json({
+          result: '',
+          isSuccess: true,
+          error: '',
+          statusCode: 204,
+        });
+    })
+    .catch((err) => {
+      return res.status(400).json({
+        result: '',
+        isSuccess: false,
+        error: err,
+        statusCode: 400,
+      });
+    });
+});
+
+router.get('/Order/:ID', (req, res, next) => {
+  getOrderById(req.params)
+    .then((result) => {
+      console.log(result.dataValues);
+      if (result !== null)
+        return res.status(200).json({
+          result: result.dataValues,
+          isSuccess: true,
+          error: '',
+          statusCode: 200,
+        });
+      else
+        return res.status(200).json({
+          result: '',
+          isSuccess: true,
+          error: '',
+          statusCode: 204,
+        });
+    })
+    .catch((err) => {
+      return res.status(400).json({
+        result: '',
+        isSuccess: false,
+        error: err,
+        statusCode: 400,
+      });
+    });
+});
+
+router.get('/Order', (req, res, next) => {
+  getOrder()
+    .then((result) => {
+      if (result !== null)
+        return res.status(200).json({
+          result: result,
+          isSuccess: true,
+          error: '',
+          statusCode: 200,
+        });
+      else
+        return res.status(200).json({
+          result: '',
+          isSuccess: true,
+          error: '',
+          statusCode: 204,
+        });
+    })
+    .catch((err) => {
+      return res.status(400).json({
+        result: '',
+        isSuccess: false,
+        error: err,
+        statusCode: 400,
+      });
+    });
+});
+
+module.exports = router;
